Feat: add dummy data and add getplayerinfo
